--- a/themes/uoc/layouts/partials/share.html
+++ b/themes/uoc/layouts/partials/share.html
@@ -1,4 +1,4 @@
-<div class="social-links unstyled" role="list" aria-hidden="true">
+<div class="social-links unstyled" role="list">
     <span role="listitem"><a class="addthis_button_facebook at300b" title="Facebook (El link s'obre en finestra nova)" aria-label="Facebook (El link s'obre en finestra nova)" target="_blank" href="#"><span class="icon icon--social-facebook" ></span></a></span>
     <span role="listitem"><a class="addthis_button_twitter at300b" title="Twitter (El link s'obre en finestra nova)" aria-label="Twitter (El link s'obre en finestra nova)" target="_blank" href="#"><span class="icon icon--social-twitter" ></span></a></span>
     <span role="listitem"><a class="addthis_button_linkedin at300b" title="LinkedIn (El link s'obre en finestra nova)" aria-label="LinkedIn (El link s'obre en finestra nova)" target="_blank" href="#"><span class="icon icon--social-linkedin" ></span></a></span>
