--- a/themes/uoc/layouts/partials/social_links.html
+++ b/themes/uoc/layouts/partials/social_links.html
@@ -1,16 +1,16 @@
-<div class="social-links unstyled" role="list" aria-hidden="true">
+<div class="social-links unstyled" role="list" aria-hidden="false">
     {{range .}}
     {{if eq .xarxa "facebook"}}
-    <span role=listitem><a href="{{.address}}" target="_blank" role="listitem" title='Facebook {{ T "uoc_grup_footer_links_new_window"}}' aria-label='Facebook {{ T "uoc_grup_footer_links_new_window"}}'><span class="icon icon--social-facebook"></span></a></span>
+    <span role=listitem><a href="{{.address}}" target="_blank" title='Facebook {{ T "uoc_grup_footer_links_new_window"}}' aria-label='Facebook {{ T "uoc_grup_footer_links_new_window"}}'><span class="icon icon--social-facebook"></span></a></span>
     {{end}}
     {{if eq .xarxa "twitter"}}
-    <span role=listitem><a href="{{.address}}" target="_blank" role="listitem" title='Twitter {{ T "uoc_grup_footer_links_new_window"}}' aria-label='Twitter {{ T "uoc_grup_footer_links_new_window"}}'><span class="icon icon--social-twitter"> </span></a></span>
+    <span role=listitem><a href="{{.address}}" target="_blank" title='Twitter {{ T "uoc_grup_footer_links_new_window"}}' aria-label='Twitter {{ T "uoc_grup_footer_links_new_window"}}'><span class="icon icon--social-twitter"> </span></a></span>
     {{end}}
     {{if eq .xarxa "instagram"}}        
-    <span role=listitem><a href="{{.address}}" target="_blank" role="listitem" title='Instagram {{ T "uoc_grup_footer_links_new_window"}}' aria-label='Instagram {{ T "uoc_grup_footer_links_new_window"}}'><span class="icon icon--social-instagram"> </span></a></span>
+    <span role=listitem><a href="{{.address}}" target="_blank" title='Instagram {{ T "uoc_grup_footer_links_new_window"}}' aria-label='Instagram {{ T "uoc_grup_footer_links_new_window"}}'><span class="icon icon--social-instagram"> </span></a></span>
     {{end}}
     {{if eq .xarxa "web"}}        
-    <span role=listitem><a href="{{.address}}" target="_blank" role="listitem" title='Web {{ T "uoc_grup_footer_links_new_window"}}' aria-label='Web {{ T "uoc_grup_footer_links_new_window"}}'><span class="icon icon--material-web"> </span></a></span>
+    <span role=listitem><a href="{{.address}}" target="_blank" title='Web {{ T "uoc_grup_footer_links_new_window"}}' aria-label='Web {{ T "uoc_grup_footer_links_new_window"}}'><span class="icon icon--material-web"> </span></a></span>
     {{end}}
     {{end}}
 </div>
