--- a/themes/uoc/layouts/partials/subsection.html
+++ b/themes/uoc/layouts/partials/subsection.html
@@ -1,14 +1,17 @@
-{{with (index . 0).video}}
-<br>
-<div class="embed-container">
-    <iframe src="https://www.youtube.com/embed/{{.}}" title='Youtube' allowfullscreen></iframe>
-</div>
-{{end}}
 <div class="card-in-acordeon">
     <div class="wrap-richText">
         {{ safeHTML (markdownify (index . 0).descripcio) }}
     </div>
 </div>
+{{with (index . 0).video_list}}
+    {{ range $v := . }}
+    <br>
+    <div class="embed-container">
+        <iframe src="https://www.youtube.com/embed/{{$v.video}}" title='Youtube' allowfullscreen></iframe>
+    </div>
+    {{end}}
+    <br>
+{{end}}
 {{with (index . 0).docs_rels}}
 <div class="card-in-acordeon" aria-hidden="true">
     
@@ -18,8 +21,8 @@
     {{ range $d := . }}
     <div class="row" >
         {{$doc := split $d.file "/"}}
-        {{$stat := os.Stat "static/img/informe_disseny_web_r_i.pdf"}}
-        
+        {{$docpre := (print "static/" $d.file)}}
+        {{$stat := os.Stat $docpre }}
         <a id="docs" href="{{ $d.file }}" target="_blank" title='{{ T "uoc_ri_docs" }} ({{$scratch.Get "idx"}})'>
             <span class="icon icon--material-pdf" ></span>
             <!--File size in MB with 3 dec-->
