--- a/themes/uoc/layouts/difusions/single.html
+++ b/themes/uoc/layouts/difusions/single.html
@@ -21,10 +21,12 @@
             </div>
 
             {{ range first 1 (where (where .Site.Pages.ByDate.Reverse ".Params.destacat" true) ".Params.language" .Site.Language.Lang)}}
-            <div class=" col-md-9 col-xs-9">
-                <a href="{{.Permalink}}" class="">
-                <div class="bg-simple img-wpr img-wpr--horizontal img--tint">
+            <div class=" col-md-9 col-xs-9" role="region">
+                
+                <div class="bg-simple img-wpr img-wpr--horizontal img--tint link-trigger" aria-label="link">
+                    
                     {{ with .Params.general.img}}<img src="{{.}}" class="img-wpr__cover" alt="">{{end}}
+                    <a href="{{.Permalink}}"></a>
                     <div class="img-wpr__contents_no-bg">
                         <div class="row">
                             <div class="col-md-7">
@@ -34,28 +36,28 @@
                     </div>
                     <div class="img-wpr__contents_no-bg"  style="bottom: .5rem;">
                         <div class="row">
-                            <div class="float-right p-right-x text-small inverse">{{if eq .Type "noticia" }}{{ T "uoc_ri_noticia" }}{{else}}{{ T "uoc_ri_esdeveniment" }}{{end}}
-                            </div>
+                            <span class="float-right p-right-x text-small inverse" aria-label="tag">{{if eq .Type "noticia" }}{{ T "uoc_ri_noticia" }}{{else}}{{ T "uoc_ri_esdeveniment" }}{{end}}</span>
                         </div>
                     </div>
-                </div></a>
+                </div>
             </div>
             {{end}}
 
             {{ range first 1 (after 1 (where (where .Site.Pages.ByDate.Reverse ".Params.destacat" true) ".Params.language" .Site.Language.Lang))}}
-            <div class="col-xs-6 col-md-3" role="article">
-                <a href="{{.Permalink}}" class="card-absolute-link"></a>
-                <div class="card" role="region" aria-label="Texto descriptivo" >
+            <div class="col-xs-6 col-md-3" role="region">
+                
+                <div class="card" aria-label="link" >
+                    <a href="{{.Permalink}}" class="card-absolute-link"></a>
                     <div class="card__image">
-                        <img src="{{with .Params.general.img}}{{.}}{{end}}" alt="{{with .Params.general.titol}}{{.}}{{end}}">
+                        <img src="{{with .Params.general.img}}{{.}}{{end}}" alt="">
                     </div>
                     <div class="card__contents" >
                         <h3 class="h5 text font-alternate">{{.Params.general.titol}}</h3>
                         {{ with .Params.general.entrada}}<p class="text-small text font-alternate"><blockquote class="pullquote">{{.}}</blockquote></p>{{end}}
                     </div>
                     <div class="card__footer">
-                        <div class="float-left p-left-x  icon icon--external-link"></div>
-                        <div class="float-right p-right-x">{{if eq .Type "noticia" }}{{ T "uoc_ri_noticia" }}{{else}}{{ T "uoc_ri_esdeveniment" }}{{end}}</div>
+                        <span class="float-left p-left-x  icon icon--external-link" aria-hidden="true"></span>
+                        <span class="float-right p-right-x" aria-label="tag">{{if eq .Type "noticia" }}{{ T "uoc_ri_noticia" }}{{else}}{{ T "uoc_ri_esdeveniment" }}{{end}}</span>
                     </div>
                 </div>
             </div>
@@ -65,19 +67,19 @@
                 <div class="col-xs-12">
                     <div class="text-align-center text-small" style="margin-top:50px;margin-bottom:50px;">
                         <h2 class="h4"><strong>{{ T "uoc_ri_difusio_novetats" }}</strong></h2>
-                                <div class="icon icon--arrow-down"></div>
+                                <span class="icon icon--arrow-down" aria-hidden="true"></span>
 
                      </div>
                 </div>
             </div>               
             <div class="row resultsDifusions">
                 <div class="col-xs-12 col-md-12 col-lg-12" >
-                    <div class="row list-difusions">
+                    <div class="row list-difusions" role="list">
                     </div>
                     <div class="pagination-difusions">
                         <div class="row">
                             <div class="col-xs-12">
-                                <div class="pagination-difusions-container"></div>
+                                <div class="pagination-difusions-container " aria-label = pagination></div>
                             </div>
                         </div>
                     </div>                        
